--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -63,22 +63,22 @@
 		 {
 		     "id":"slide-img-1", //Óëslide-runnerÖÐµÄimg±êÇ©id¶ÔÓ¦
 			 "client":"×íÅ£±Æ",
-			 "desc":"×íÅ£±ÆÊÇÎä»ê×íÅ£±ÆµÄ´æÔÚ"     //ÕâÀïÃèÊöÍ¼Æ¬ÄÚÈÝ
+			 "desc":""     //ÕâÀïÃèÊöÍ¼Æ¬ÄÚÈÝ
 		 },
 		 {
 		     "id":"slide-img-2", 
-			 "client":"×íÅ£±Æ",
-			 "desc":"×íÅ£±ÆÊÇÎä»ê×íÅ£±ÆµÄ´æÔÚ"
+			 "client":"xxx",
+			 "desc":"醉牛逼醉牛逼是武魂醉牛逼的存在"
 		 },
 		 {
 		     "id":"slide-img-3", 
 			 "client":"×íÅ£±Æ",
-			 "desc":"×íÅ£±ÆÊÇÎä»ê×íÅ£±ÆµÄ´æÔÚ"
+			 "desc":"醉牛逼醉牛逼是武魂醉牛逼的存在"
 		 },
 		 {
 		     "id":"slide-img-4", 
 			 "client":"×íÅ£±Æ",
-			 "desc":"×íÅ£±ÆÊÇÎä»ê×íÅ£±ÆµÄ´æÔÚ"
+			 "desc":"醉牛逼醉牛逼是武魂醉牛逼的存在"
 		 }
 		 ];
 	   </script>
