--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -62,8 +62,8 @@
 		 slider.data=[
 		 {
 		     "id":"slide-img-1", //Óëslide-runnerÖÐµÄimg±êÇ©id¶ÔÓ¦
-			 "client":"×íÅ£±Æ",
-			 "desc":""     //ÕâÀïÃèÊöÍ¼Æ¬ÄÚÈÝ
+			 "client":"醉牛逼醉牛逼是武魂醉牛逼的存在",
+			 "desc":"醉牛逼醉牛逼是武魂醉牛逼的存在"     //ÕâÀïÃèÊöÍ¼Æ¬ÄÚÈÝ
 		 },
 		 {
 		     "id":"slide-img-2", 
@@ -72,12 +72,12 @@
 		 },
 		 {
 		     "id":"slide-img-3", 
-			 "client":"×íÅ£±Æ",
+			 "client":"醉牛逼醉牛逼是武魂醉牛逼的存在",
 			 "desc":"醉牛逼醉牛逼是武魂醉牛逼的存在"
 		 },
 		 {
 		     "id":"slide-img-4", 
-			 "client":"×íÅ£±Æ",
+			 "client":"醉牛逼醉牛逼是武魂醉牛逼的存在",
 			 "desc":"醉牛逼醉牛逼是武魂醉牛逼的存在"
 		 }
 		 ];
