--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -3,7 +3,8 @@
 <head>
  <meta charset="gb2312">
  <title>大水个人技术博客</title>
- <meta name="¹Ø¼ü×Ö" content="">
+ <meta name="大水" content="">
+ <meta charset="UTF-8">
  <link href="__PUBLIC__/css/buju.css" rel="stylesheet">
  <link href="__PUBLIC__/css/index.css" rel="stylesheet">
  <script type="text/javascript" src="__PUBLIC__/js/jquery.min.js"></script>
