--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -62,24 +62,24 @@
 		 }
 		 slider.data=[
 		 {
-		     "id":"slide-img-1", //Óëslide-runnerÖÐµÄimg±êÇ©id¶ÔÓ¦
-			 "client":"醉牛逼醉牛逼是武魂醉牛逼的存在",
-			 "desc":"醉牛逼醉牛逼是武魂醉牛逼的存在"     //ÕâÀïÃèÊöÍ¼Æ¬ÄÚÈÝ
+		     "id":"slide-img-1", //
+			 "client":"blog",
+			 "desc":"blog"     //ÕâÀïÃèÊöÍ¼Æ¬ÄÚÈÝ
 		 },
 		 {
 		     "id":"slide-img-2", 
 			 "client":"xxx",
-			 "desc":"醉牛逼醉牛逼是武魂醉牛逼的存在"
+			 "desc":"blog"
 		 },
 		 {
 		     "id":"slide-img-3", 
-			 "client":"醉牛逼醉牛逼是武魂醉牛逼的存在",
-			 "desc":"醉牛逼醉牛逼是武魂醉牛逼的存在"
+			 "client":"blog",
+			 "desc":"blog"
 		 },
 		 {
 		     "id":"slide-img-4", 
-			 "client":"醉牛逼醉牛逼是武魂醉牛逼的存在",
-			 "desc":"醉牛逼醉牛逼是武魂醉牛逼的存在"
+			 "client":"blog",
+			 "desc":"blog"
 		 }
 		 ];
 	   </script>
