--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -298,7 +298,7 @@
 		  </div>
 	   </div>
 	   <div class="cloud">
-	     <h3>±êÇ©ÔÆ</h3>
+	     <h3>标签云</h3>
 		  <ul>
 		    <li><a href="/">个人博客</a></li>
 			 <li><a href="/">web开发</a></li>
