--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
  <meta charset="gb2312">
- <title>大水个人技术博客</title>
+ <title>大水个人博客</title>
  <meta name="大水" content="">
  <meta charset="UTF-8">
  <link href="__PUBLIC__/css/buju.css" rel="stylesheet">
