--- a/Application/Home/View/Index/index.html
+++ b/Application/Home/View/Index/index.html
@@ -290,7 +290,7 @@
 			   <div class="bd bd-news" ><ul>
 			      <li><a href="/" target="_blank">你面对的是生活而不是手机</a></li>
 				   <li><a href="/" target="_blank">你面对的是生活而不是手机</a></li>
-				   <li><a href="/" target="_blank">×¡ÔÚÊÖ»úÀïµÄÅóÓÑ</a></li>
+				   <li><a href="/" target="_blank">你面对的是生活而不是手机</a></li>
 				   <li><a href="/" target="_blank">手机的16个惊人小秘密，据说99.999%的</a></li>
 				   <li><a href="/" target="_blank">手机的16个惊人小秘密，据说99.999%的</a></li>
 				   <li><a href="/" target="_blank">豪雅手机正式发布! 在法国全手工打造的奢</a></li>
