--- a/Application/Home/View/default/Index/index.html
+++ b/Application/Home/View/default/Index/index.html
@@ -108,7 +108,7 @@
         </header>
         <p class="meta">
           <time class="time"><i class="glyphicon glyphicon-time"></i> {$vo.post_date}</time>
-          <span class="views"><i class="glyphicon glyphicon-eye-open"></i> 共{$post_hits}人围观</span> <a class="comment" href="article.html#comment"><i class="glyphicon glyphicon-comment"></i> 0个不明物体</a></p>
+          <span class="views"><i class="glyphicon glyphicon-eye-open"></i> 共{$vo.post_hits}人围观</span> <a class="comment" href="article.html#comment"><i class="glyphicon glyphicon-comment"></i> 0个不明物体</a></p>
         <p class="note">可以用strtotime()把日期（$date）转成时间戳，再用date()按需要验证的格式转成一个日期，来跟$date比较是否相同来验证这个日期的格式是否是正确的。所以要验证日期格式 ... </p>
       </article>
      </volist>
