--- a/Application/Home/View/default/Article/article.html
+++ b/Application/Home/View/default/Article/article.html
@@ -5,7 +5,7 @@
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>异清轩博客文章页面</title>
+<title>檀大水博客</title>
 <link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/nprogress.css">
 <link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/style.css">
