--- a/Application/Home/View/default/Index/index.html
+++ b/Application/Home/View/default/Index/index.html
@@ -5,7 +5,7 @@
 <meta name="renderer" content="webkit">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>檀大水博客</title>
+<title>大水博客</title>
 <link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/nprogress.css">
 <link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/style.css">
@@ -50,7 +50,7 @@
       </div>
       <div class="collapse navbar-collapse" id="header-navbar">
         <ul class="nav navbar-nav navbar-right">
-          <li class="hidden-index active"><a data-cont="异清轩首页" href="index.html">异清轩首页</a></li>
+          <li class="hidden-index active"><a data-cont="异清轩首页" href="{:U('Index/index')}">大水首页</a></li>
           <li><a href="category.html">前端技术</a></li>
           <li><a href="category.html">后端程序</a></li>
           <li><a href="category.html">管理系统</a></li>
