--- a/Application/Home/View/default/Article/article.html
+++ b/Application/Home/View/default/Article/article.html
@@ -1,73 +1,9 @@
-<!doctype html>
-<html lang="zh-CN">
-<head>
-<meta charset="utf-8">
-<meta name="renderer" content="webkit">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>檀大水博客</title>
-<link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/nprogress.css">
-<link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/style.css">
-<link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/font-awesome.min.css">
-<link rel="apple-touch-icon-precomposed" href="__PUBLIC__/default/images/icon/icon.png">
-<link rel="shortcut icon" href="__PUBLIC__/default/images/icon/favicon.ico">
-<script src="__PUBLIC__/default/js/jquery-2.1.4.min.js"></script>
-<script src="__PUBLIC__/default/js/nprogress.js"></script>
-<script src="__PUBLIC__/default/js/jquery.lazyload.min.js"></script>
-<!--[if gte IE 9]>
-  <script src="js/jquery-1.11.1.min.js" type="text/javascript"></script>
-  <script src="js/html5shiv.min.js" type="text/javascript"></script>
-  <script src="js/respond.min.js" type="text/javascript"></script>
-  <script src="js/selectivizr-min.js" type="text/javascript"></script>
-<![endif]-->
-<!--[if lt IE 9]>
-  <script>window.location.href='upgrade-browser.html';</script>
-<![endif]-->
-</head>
+<!--文件头部-->
+<include file='./Application/Home/View/default/header.html' />
 
 <body class="user-select single">
-<header class="header">
-  <nav class="navbar navbar-default" id="navbar">
-    <div class="container">
-      <div class="header-topbar hidden-xs link-border">
-        <ul class="site-nav topmenu">
-          <li><a href="tags.html">标签云</a></li>
-          <li><a href="readers.html" rel="nofollow">读者墙</a></li>
-          <li><a href="links.html" rel="nofollow">友情链接</a></li>
-          <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" rel="nofollow">关注本站 <span class="caret"></span></a>
-            <ul class="dropdown-menu header-topbar-dropdown-menu">
-              <li><a data-toggle="modal" data-target="#WeChat" rel="nofollow"><i class="fa fa-weixin"></i> 微信</a></li>
-              <li><a href="#" rel="nofollow"><i class="fa fa-weibo"></i> 微博</a></li>
-              <li><a data-toggle="modal" data-target="#areDeveloping" rel="nofollow"><i class="fa fa-rss"></i> RSS</a></li>
-            </ul>
-          </li>
-        </ul>
-        <a href="javascript:;" class="login" rel="nofollow">Hi,请登录</a>&nbsp;&nbsp;<a href="javascript:;" class="register" rel="nofollow">我要注册</a>&nbsp;&nbsp;<a href="" rel="nofollow">找回密码</a> </div>
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#header-navbar" aria-expanded="false"> <span class="sr-only"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span class="icon-bar"></span> </button>
-        <h1 class="logo hvr-bounce-in"><a href="" title=""><img src="images/logo.png" alt=""></a></h1>
-      </div>
-      <div class="collapse navbar-collapse" id="header-navbar">
-        <ul class="nav navbar-nav navbar-right">
-          <li class="hidden-index active"><a data-cont="异清轩首页" href="{:U('Index/index')}">首页</a></li>
-          <li><a href="category.html">前端技术</a></li>
-          <li><a href="category.html">后端程序</a></li>
-          <li><a href="category.html">管理系统</a></li>
-          <li><a href="category.html">授人以渔</a></li>
-          <li><a href="category.html">程序人生</a></li>
-        </ul>
-        <form class="navbar-form visible-xs" action="/Search" method="post">
-          <div class="input-group">
-            <input type="text" name="keyword" class="form-control" placeholder="请输入关键字" maxlength="20" autocomplete="off">
-            <span class="input-group-btn">
-            <button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
-            </span> </div>
-        </form>
-      </div>
-    </div>
-  </nav>
-</header>
+<!--导航栏-->
+<include file='./Application/Home/View/default/nav.html' />
 <section class="container">
   <div class="content-wrap">
     <div class="content">
@@ -137,74 +73,10 @@
       </div>
     </div>
   </div>
-  <aside class="sidebar">
-    <div class="fixed">
-      <div class="widget widget-tabs">
-        <ul class="nav nav-tabs" role="tablist">
-          <li role="presentation" class="active"><a href="#notice" aria-controls="notice" role="tab" data-toggle="tab">网站公告</a></li>
-          <li role="presentation"><a href="#centre" aria-controls="centre" role="tab" data-toggle="tab">会员中心</a></li>
-          <li role="presentation"><a href="#contact" aria-controls="contact" role="tab" data-toggle="tab">联系站长</a></li>
-        </ul>
-        <div class="tab-content">
-          <div role="tabpanel" class="tab-pane notice active" id="notice">
-            <ul>
-              <li>
-                <time datetime="2016-01-04">01-04</time>
-                <a href="" target="_blank">欢迎访问异清轩博客</a></li>
-              <li>
-                <time datetime="2016-01-04">01-04</time>
-                <a target="_blank" href="">在这里可以看到前端技术，后端程序，网站内容管理系统等文章，还有我的程序人生！</a></li>
-              <li>
-                <time datetime="2016-01-04">01-04</time>
-                <a target="_blank" href="">在这个小工具中最多可以调用五条</a></li>
-            </ul>
-          </div>
-          <div role="tabpanel" class="tab-pane centre" id="centre">
-            <h4>需要登录才能进入会员中心</h4>
-            <p> <a href="javascript:;" class="btn btn-primary">立即登录</a> <a href="javascript:;" class="btn btn-default">现在注册</a> </p>
-          </div>
-          <div role="tabpanel" class="tab-pane contact" id="contact">
-            <h2>Email:<br />
-              <a href="mailto:admin@ylsat.com" data-toggle="tooltip" data-placement="bottom" title="admin@ylsat.com">admin@ylsat.com</a></h2>
-          </div>
-        </div>
-      </div>
-      <div class="widget widget_search">
-        <form class="navbar-form" action="/Search" method="post">
-          <div class="input-group">
-            <input type="text" name="keyword" class="form-control" size="35" placeholder="请输入关键字" maxlength="15" autocomplete="off">
-            <span class="input-group-btn">
-            <button class="btn btn-default btn-search" name="search" type="submit">搜索</button>
-            </span> </div>
-        </form>
-      </div>
-    </div>
-    <div class="widget widget_sentence">
-      <h3>每日一句</h3>
-      <div class="widget-sentence-content">
-        <h4>2016年01月05日星期二</h4>
-        <p>Do not let what you cannot do interfere with what you can do.<br />
-          别让你不能做的事妨碍到你能做的事。（John Wooden）</p>
-      </div>
-    </div>
-    <div class="widget widget_hot">
-      <h3>热门文章</h3>
-      <ul>
-        <li><a href=""><span class="thumbnail"><img class="thumb" data-original="images/excerpt.jpg" src="images/excerpt.jpg" alt=""></span><span class="text">php如何判断一个日期的格式是否正确</span><span class="muted"><i class="glyphicon glyphicon-time"></i> 2016-1-4 </span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i> 120</span></a></li>
-        <li><a href=""><span class="thumbnail"><img class="thumb" data-original="images/excerpt.jpg" src="images/excerpt.jpg" alt=""></span><span class="text">php如何判断一个日期的格式是否正确</span><span class="muted"><i class="glyphicon glyphicon-time"></i> 2016-1-4 </span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i> 120</span></a></li>
-        <li><a href=""><span class="thumbnail"><img class="thumb" data-original="images/excerpt.jpg" src="images/excerpt.jpg" alt=""></span><span class="text">php如何判断一个日期的格式是否正确</span><span class="muted"><i class="glyphicon glyphicon-time"></i> 2016-1-4 </span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i> 120</span></a></li>
-        <li><a href=""><span class="thumbnail"><img class="thumb" data-original="images/excerpt.jpg" src="images/excerpt.jpg" alt=""></span><span class="text">php如何判断一个日期的格式是否正确</span><span class="muted"><i class="glyphicon glyphicon-time"></i> 2016-1-4 </span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i> 120</span></a></li>
-        <li><a href=""><span class="thumbnail"><img class="thumb" data-original="images/excerpt.jpg" src="images/excerpt.jpg" alt=""></span><span class="text">php如何判断一个日期的格式是否正确</span><span class="muted"><i class="glyphicon glyphicon-time"></i> 2016-1-4 </span><span class="muted"><i class="glyphicon glyphicon-eye-open"></i> 120</span></a></li>
-      </ul>
-    </div>
-  </aside>
+  <!--页面左侧的-->
+  <include file='./Application/Home/View/default/left.html' />
 </section>
-<footer class="footer">
-  <div class="container">
-    <p>&copy; 2016 <a href="">ylsat.com</a> &nbsp; <a href="http://www.miitbeian.gov.cn/" target="_blank" rel="nofollow">豫ICP备20151109-1</a> &nbsp; <a href="sitemap.xml" target="_blank" class="sitemap">网站地图</a></p>
-  </div>
-  <div id="gotop"><a class="gotop"></a></div>
-</footer>
+<include file='./Application/Home/View/default/footer.html' />
 <!--微信二维码模态框-->
 <div class="modal fade user-select" id="WeChat" tabindex="-1" role="dialog" aria-labelledby="WeChatModalLabel">
   <div class="modal-dialog" role="document" style="margin-top:120px;width:280px;">
