--- a/Application/Home/View/default/Index/index.html
+++ b/Application/Home/View/default/Index/index.html
@@ -1,6 +1,7 @@
 <!-- <include file="default:header" /> -->
 <!--文件头部-->
-<include file='./Application/Home/View/default/header.html' />
+<include file='./Application/Home/View/Default/Header.html' />
+<!-- <include file='Default/public/Header' /> -->
 <body class="user-select">
 <!--导航栏-->
 <include file='./Application/Home/View/default/nav.html' />
@@ -31,7 +32,7 @@
         <a class="left carousel-control" href="#focusslide" role="button" data-slide="prev" rel="nofollow"> <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span> <span class="sr-only">上一个</span> </a> <a class="right carousel-control" href="#focusslide" role="button" data-slide="next" rel="nofollow"> <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span> <span class="sr-only">下一个</span> </a> </div>
       
       <div class="title">
-        <h3>文章列表</h3>
+        <h3>文章列表<!-- {$Think.version} --></h3>
         
       </div>
       <volist name="list['posts']" id="vo" empty="暂无数据">
