--- a/Application/Home/View/default/Index/index.html
+++ b/Application/Home/View/default/Index/index.html
@@ -37,7 +37,7 @@
       </div>
       <volist name="list['posts']" id="vo" empty="暂无数据">
       <article class="excerpt excerpt-1"><a class="focus" href="{:leuu('article/index',array('id'=>$vo['tid'],'cid'=>$vo['term_id']))}" title=""><img class="thumb" data-original="__PUBLIC__/Uploads/{$vo.smeta}" src="__PUBLIC__/default/images/excerpt.jpg" alt=""></a>
-        <header><a class="cat" href="program">后端程序<i></i></a>
+        <header><a class="cat" href="program">{$vo.name}<i></i></a>
           <h2><a href="{:leuu('article/index',array('id'=>$vo['tid'],'cid'=>$vo['term_id']))}" title="">{$vo.post_title}</a></h2>
         </header>
         <p class="meta">
