--- a/Application/Admin/View/Index/index.html
+++ b/Application/Admin/View/Index/index.html
@@ -59,7 +59,7 @@
                 <div class="media logged-user">
                     <img alt="" src="images/photos/user-avatar.png" class="media-object">
                     <div class="media-body">
-                        <h4><a href="#">John Doe</a></h4>
+                        <h4><a href="#">{$admin.user_nicename|default=$admin[user_login]}</a></h4>
                         <span>"Hello There..."</span>
                     </div>
                 </div>
@@ -68,7 +68,7 @@
                 <ul class="nav nav-pills nav-stacked custom-nav">
                   <li><a href="#"><i class="fa fa-user"></i> <span>Profile</span></a></li>
                   <li><a href="#"><i class="fa fa-cog"></i> <span>Settings</span></a></li>
-                  <li><a href="#"><i class="fa fa-sign-out"></i> <span>Sign Out</span></a></li>
+                  <li><a href="{:U('Public/logout')}"><i class="fa fa-sign-out"></i> <span>Sign Out</span></a></li>
                 </ul>
             </div>
 
@@ -290,13 +290,13 @@
                     <li>
                         <a href="#" class="btn btn-default dropdown-toggle" data-toggle="dropdown">
                             <img src="images/photos/user-avatar.png" alt="" />
-                            John Doe
+                            {$admin.user_nicename|default=$admin[user_login]}
                             <span class="caret"></span>
                         </a>
                         <ul class="dropdown-menu dropdown-menu-usermenu pull-right">
                             <li><a href="#"><i class="fa fa-user"></i>  Profile</a></li>
                             <li><a href="#"><i class="fa fa-cog"></i>  Settings</a></li>
-                            <li><a href="#"><i class="fa fa-sign-out"></i> Log Out</a></li>
+                            <li><a href="{:U('Public/logout')}"><i class="fa fa-sign-out"></i> Log Out</a></li>
                         </ul>
                     </li>
 
