--- a/Application/Home/View/default/Index/header.html
+++ b/Application/Home/View/default/Index/header.html
@@ -6,6 +6,8 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>檀大水博客</title>
+<meta name="keywords" content="檀大水博客,PHP,linux,MySql,thinkcmf,redis,html+css,javascript,jquery">
+<meta name="description" content="檀大水博客,PHP,linux,MySql,thinkcmf,redis,html+css,javascript,jquery">
 <link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/nprogress.css">
 <link rel="stylesheet" type="text/css" href="__PUBLIC__/default/css/style.css">
