--- a/Application/Home/View/default/left.html
+++ b/Application/Home/View/default/left.html
@@ -20,7 +20,7 @@
           </div>
           <div role="tabpanel" class="tab-pane centre" id="centre">
             <h4>需要登录才能进入会员中心</h4>
-            <p> <a data-toggle="modal" data-target="#loginModal" class="btn btn-primary">立即登录</a> <a href="javascript:;" class="btn btn-default">现在注册</a> </p>
+            <p> <a data-toggle="modal" data-target="#loginModal" class="btn btn-primary">立即登录</a> <a href="javascript:;" class="btn btn-default" data-toggle="modal" data-target="#registerModal">现在注册</a> </p>
           </div>
           <div role="tabpanel" class="tab-pane contact" id="contact">
             <h2>Email:<br />
