--- a/Application/Home/View/Default/links/links.html
+++ b/Application/Home/View/Default/links/links.html
@@ -12,7 +12,7 @@
       <ul class="pagemenu">
         <li><a href="tags.html">标签云</a></li>
         <li><a href="readers.html">读者墙</a></li>
-        <li><a href="{:U('Links/index')}">友情链接</a></li>
+        <li><a href="{:U('links/index')}">友情链接</a></li>
       </ul>
     </div>
   </div>
