--- a/Application/Home/View/default/nav.html
+++ b/Application/Home/View/default/nav.html
@@ -5,7 +5,7 @@
         <ul class="site-nav topmenu">
           <li><a href="tags.html">标签云</a></li>
           <li><a href="readers.html" rel="nofollow">读者墙</a></li>
-          <li><a href="{:U('Links/index')}" rel="nofollow">友情链接</a></li>
+          <li><a href="{:U('links/index')}" rel="nofollow">友情链接</a></li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" rel="nofollow">关注本站 <span class="caret"></span></a>
             <ul class="dropdown-menu header-topbar-dropdown-menu">
               <li><a data-toggle="modal" data-target="#WeChat" rel="nofollow"><i class="fa fa-weixin"></i> 微信</a></li>
