--- a/Application/Home/View/default/footer.html
+++ b/Application/Home/View/default/footer.html
@@ -1,6 +1,6 @@
 <footer class="footer">
   <div class="container">
-    <p>&copy; 2016 <a href="">ylsat.com</a> &nbsp; <a href="http://www.miitbeian.gov.cn/" target="_blank" rel="nofollow">京ICP备16045225号-1</a> &nbsp; <a href="sitemap.xml" target="_blank" class="sitemap">网站地图</a></p>
+    <p>&copy; 2016 <a href="">ylsat.com</a> &nbsp; <a href="http://www.miitbeian.gov.cn/" target="_blank" rel="nofollow">京ICP备16045225号-1</a> &nbsp; <a href="#" target="_blank" class="sitemap">网站地图</a></p>
   </div>
   <div id="gotop"><a class="gotop"></a></div>
 </footer>
