--- a/Application/Home/View/default/nav.html
+++ b/Application/Home/View/default/nav.html
@@ -3,8 +3,8 @@
     <div class="container">
       <div class="header-topbar hidden-xs link-border">
         <ul class="site-nav topmenu">
-          <li><a href="tags.html">标签云</a></li>
-          <li><a href="readers.html" rel="nofollow">读者墙</a></li>
+          <li><a href="{:U('Tags/index')}">标签云</a></li>
+          <li><a href="{:U('Readers/index')}" rel="nofollow">读者墙</a></li>
           <li><a href="{:U('Links/index')}" rel="nofollow">友情链接</a></li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" rel="nofollow">关注本站 <span class="caret"></span></a>
             <ul class="dropdown-menu header-topbar-dropdown-menu">
