--- a/Application/Home/View/default/Links/links.html
+++ b/Application/Home/View/default/Links/links.html
@@ -10,8 +10,8 @@
   <div class="pageside">
     <div class="pagemenus">
       <ul class="pagemenu">
-        <li><a href="tags.html">标签云</a></li>
-        <li><a href="readers.html">读者墙</a></li>
+        <li><a href="{:U('Tags/index')}">标签云</a></li>
+        <li><a href="{:U('Readers/index')}">读者墙</a></li>
         <li><a href="{:U('links/index')}">友情链接</a></li>
       </ul>
     </div>
