--- a/Application/Home/View/default/Links/links.html
+++ b/Application/Home/View/default/Links/links.html
@@ -39,6 +39,8 @@
       <li><a href="http://www.linuxidc.com/" title="" target="_blank" rel="nofollow"><img src="images/icon/favicon.ico" alt="">Linux公社</a></li>
       <li><a href="http://www.lagou.com/" title="" target="_blank" rel="nofollow"><img src="images/icon/favicon.ico" alt="">拉勾网</a></li>
       <li><a href="https://www.juhe.cn/" title="" target="_blank" rel="nofollow"><img src="images/icon/favicon.ico" alt="">聚合数据</a></li>
+      <li><a href="http://www.chenkui102.com/" title="" target="_blank" rel="nofollow"><img src="images/icon/favicon.ico" alt="">陈奎博客</a></li>
+      
     </ul>
   </div>
 </section>
